--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,15 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/account, roles: ROLE_USER }
+        - { path: ^/account, roles: [ROLE_USER , ROLE_ADMIN] }
+        - { path: ^/photo/showall, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/photo/showone, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+
+        - { path: ^/ads/show, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/ads$, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+
+        - { path: ^/photo, roles: [ROLE_USER , ROLE_ADMIN ] }
+        - { path: ^/ads, roles: [ROLE_USER , ROLE_ADMIN ] }
+
+
 
