--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/cache": "^1.7",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -18,6 +19,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.1",
         "symfony/security-bundle": "^4.1",
+        "symfony/serializer": "^4.1",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.1",
